erDiagram
  FORUM {
    string id PK
    string name UK
    string description
    boolean isPublic
    string_array tags
    string createdById
    datetime createdAt
    datetime updatedAt
  }

  FORUM_MEMBERSHIP {
    string id PK
    string forumId FK
    string userId
    string role
    datetime createdAt
  }

  FORUM_THREAD {
    string id PK
    string forumId FK
    string title
    string content
    string createdById
    boolean isPinned
    boolean isLocked
    datetime createdAt
    datetime updatedAt
  }

  FORUM_POST {
    string id PK
    string threadId FK
    string authorId
    string content
    string parentPostId FK
    datetime createdAt
    datetime updatedAt
  }

  FORUM_POST_REACTION {
    string id PK
    string postId FK
    string userId
    string type
    datetime createdAt
  }

  FORUM ||--o{ FORUM_MEMBERSHIP : has_members
  FORUM ||--o{ FORUM_THREAD : has_threads
  FORUM_THREAD ||--o{ FORUM_POST : has_posts
  FORUM_POST ||--o{ FORUM_POST_REACTION : has_reactions
  FORUM_POST ||--o{ FORUM_POST : replies_to
